added new features

--- a/index.html
+++ b/index.html
@@ -346,8 +346,10 @@
 
 
   <!-- foooter -->
-  <footer class="text-white">
-
+  
+  <footer class="text-white container-fluid">
+<br>
+<br>
 
     <!-- for the medium screen sizes -->
     <div class="container">
@@ -515,7 +517,6 @@
           <br>
           <h3 class="text-center">FOLLOW VANS</h3>
           <br>
-          <center>
           <div class="container d-flex justify-content-center">
               <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwiX7-SB1J6AAxWUP8AKHT7WAi0QFnoECA4QAQ&url=https%3A%2F%2Ftwitter.com%2FVans&usg=AOvVaw0O_q7nIthIV5aaDP_uuow0&opi=89978449"><i class="bi bi-twitter iconz twitter"></i></a>
               <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwia3_rl1J6AAxVtWEEAHVcbD4MQFnoECBEQAQ&url=https%3A%2F%2Fwww.facebook.com%2FVANS%2F&usg=AOvVaw0mP3TDJqvuzdHGf0AyCwBj&opi=89978449"><i class="bi bi-facebook iconz facebook"></i></a>
@@ -523,10 +524,9 @@
               <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiU5LiH1Z6AAxWxT0EAHUujCiwQFnoECBEQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fvans&usg=AOvVaw0VTkor5_ki28YJps-xrF5e&opi=89978449"><i class="bi bi-youtube iconz yt"></i></a>
               <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiZ4aSV1Z6AAxXwQUEAHVv9CBgQFnoECBIQAQ&url=https%3A%2F%2Fwww.instagram.com%2Fvans%2F%3Fhl%3Den&usg=AOvVaw096rjl7FyH4zzRQ_TRw6ek&opi=89978449"><i class="bi bi-instagram iconz ig"></i></a>
           </div>
-          </center>
         </div>
         <br>
-        <div class="col-lg-6 d-md-none d-lg-none d-sm-block">
+        <div class="col-lg-6 d-none d-md-none d-lg-none d-sm-block">
           <br>
           <br>
           <h3 class="text-center">SUBSCRIBE</h3>
@@ -595,8 +595,9 @@
     <div class="container">
       <div class="row below2">
 
-        <div class="col-md-6 d-lg-flex d-none d-md-none d-lg-block d-sm-none justify-content-center">
-          <h3 class="text-center">SUBSCRIBE</h3>
+        <div class="col-md-6  d-none d-md-none d-lg-block d-sm-none justify-content-center">
+          <h3 class="text-center">SUBSCRIBE</h3><br>
+          <p style="font-family: sans-serif; text-align: center;">Receive product news and updates in your inbox</p><br>
           <form for="email" style="font-size: 10px; font-family: sans-serif;"></form>
           <div class="input-group mb-3" style="width: 300px; margin: 0 auto;">
             <input type="email" class="form-control" placeholder="Email Address:">
