--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
           <h5>Shop<i class="fas fa-chevron-down float-right d-sm-block d-md-none"></i></h5>
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Mens</a></li>
-            <li><a href="#">Womens</a></li>
-            <li><a href="#">Kids</a></li>
-            <li><a href="#">Classics</a></li>
+            <li><a href="https://www.vans.com/en-us/mens-c0001">Mens</a></li>
+            <li><a href="https://www.vans.com/en-us/womens-c0002">Womens</a></li>
+            <li><a href="https://www.vans.com/en-us/kids-c0003">Kids</a></li>
+            <li><a href="https://www.vans.com/en-us/mens/shoes/classics-c1102">Classics</a></li>
             <li><a href="#">Promotion</a></li>
            
           </ul>
@@ -434,10 +434,10 @@
           <h5 class="text-left" data-toggle="collapse" data-target="#column1Dropdown">shop<i class="bi bi-chevron-compact-down float-right"></i></h5>
           <ul class="list-unstyled collapse" id="column1Dropdown">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Mens</a></li>
-            <li><a href="#">Womens</a></li>
-            <li><a href="#">Kids</a></li>
-            <li><a href="#">Classics</a></li>
+            <li><a href="https://www.vans.com/en-us/mens-c0001">Mens</a></li>
+            <li><a href="https://www.vans.com/en-us/womens-c0002">Womens</a></li>
+            <li><a href="https://www.vans.com/en-us/kids-c0003">Kids</a></li>
+            <li><a href="https://www.vans.com/en-us/mens/shoes/classics-c1102">Classics</a></li>
             <li><a href="#">Promotion</a></li>
 
           </ul>
@@ -523,7 +523,7 @@
           </div>
         </div>
         <br>
-        <div class="col-lg-6 d-none d-md-none d-lg-none d-sm-block">
+        <div class="col-lg-6 d-block d-md-none d-lg-none d-sm-block">
           <br>
           <br>
           <h3 class="text-center">SUBSCRIBE</h3>
