added some new features

--- a/index.html
+++ b/index.html
@@ -283,22 +283,40 @@
             <img src="images/bag1.webp" class="img-fluid" alt="Image 1"> 
             <p class="itemss">checkered backpack</p>
             <h5>$56</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/bag2.jpeg" class="img-fluid" alt="Image 1">
             <p class="itemss">red checeked backpack</p>
             <h5>$45</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/image1.webp" class="img-fluid" alt="Image 2">
             <p class="itemss">Vans Ultra</p>
             <h5>$65</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
+          <br>
+            
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/imag2.webp" class="img-fluid" alt="Image 3">
             <p class="itemss">Checkered vans</p>
             <h5>$75</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
+          <br>
         </div>
         </div>
       </div>
@@ -310,22 +328,47 @@
             <img src="images/image3.webp" class="img-fluid" alt="Image 6">
             <p class="itemss">red plimsole</p>
             <h5>$40</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
+            <br>
+            <br>
+
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/image4.webp" class="img-fluid" alt="Image 4">
             <p class="itemss">Neon green& black shoe</p>
             <h5>$90</h5>
+            <button>Add To cart</button>
+            <br>
+            <br>
           </div>
+          <br>
+          <br>
+            <br>
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/image5.webp" class="img-fluid" alt="Image 7">
             <p class="itemss">Vans shoe</p>
             <h5>$78</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
+           <br>
+            <br>
           <div class="col-6 col-md-6 col-lg-3">
             <img src="images/image6.jpeg" class="img-fluid" alt="Image 8">
             <p class="itemss">Firey vans shoe</p>
             <h5>$58</h5>
+            <!-- <button onclick="addToCart()">Add To cart</button> -->
+            <br>
+            <br>
           </div>
+          <br>
+          <br>
+          <br>
         </div>
         </div>
       </div>
@@ -687,9 +730,6 @@
           </div>
 
           <!-- end -->
-
-
-          <!-- for small screen sizes -->
         
           <!-- Link to Bootstrap JS and jQuery -->
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
