--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <img src="images/image4.webp" class="img-fluid" alt="Image 4">
             <p class="itemss">Neon green& black shoe</p>
             <h5>$90</h5>
-            <button>Add To cart</button>
+            <!-- <button>Add To cart</button> -->
             <br>
             <br>
           </div>
