--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <i class="icyy bi bi-cart2" id="cart-el"></i>
       </div>
       <!-- the hamburger menuuuuu -->
-    <a class=" ml-auto" ><i class="bi bi-list "  data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"></i>
+    <a class=" ml-auto" ><i class="bi bi-list d-lg-none d-md-none "  data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"></i>
       <span class="navbar-toggler-icon"></span>
     
     
