--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
   <nav class="navbar navbar-expand-md  navbar-dark d-lg-none">
     <img src="images/vanslogo.png" width="100px" height="70px">
     <div class="icons ml-auto d-flex d-md-none ml-auto">
-        <i class="icyy bi bi-search"></i>
-        <i class="icyy bi bi-geo-alt-fill"></i>
-        <i class="icyy bi bi-cart2" id="cart-el"></i>
+        <i class="icyy-sm bi bi-search"></i>
+        <i class="icyy-sm bi bi-geo-alt-fill"></i>
+        <i class="icyy-sm bi bi-cart2" id="cart-el"></i>
       </div>
       <!-- the hamburger menuuuuu -->
     <a class=" ml-auto" ><i class="bi bi-list d-lg-none d-md-none "  data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar"></i>
