--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
   </nav>
 
   <!-- Combined Collapsible Navbar on Small Screens -->
-  <nav class="navbar navbar-expand-md  navbar-dark d-lg-none">
+  <nav class="navbar navbar-expand-md  navbar-dark d-lg-none ">
     <img src="images/vanslogo.png" width="90px" height="50px">
-    <div class="icons  d-block d-md-none  ">
+    <div class="icons  d-block d-sm-block  ">
         <i class="icyy-sm bi bi-search"></i>
         <i class="icyy-sm bi bi-geo-alt-fill"></i>
         <i class="icyy-sm bi bi-cart2" id="cart-el"></i>
@@ -112,7 +112,7 @@
     
     
     <div class="collapse navbar-collapse combined-navbar" id="collapsibleNavbar">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto d-md-none">
         <li class="nav-item">
           <a href="#" class="sidee">SHOES</a>
           <hr>
