--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Navbar 3 -->
-  <nav class="navbar navbar-expand-md navbar-dark d-none d-lg-flex vanz">
+  <nav class="navbar navbar-expand-md navbar-dark d-none d-md-none d-lg-flex vanz">
     <!-- Brand/logo -->
         <img src="images/vanslogo.png" width="110px" height="70px" style="top:-18px; position: relative;">
     <div class="collapse navbar-collapse" id="navbarNav2">
@@ -112,7 +112,7 @@
     
     
     <div class="collapse navbar-collapse combined-navbar" id="collapsibleNavbar">
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto ">
         <li class="nav-item">
           <a href="#" class="sidee">SHOES</a>
           <hr>
